<resources>
    <string name="app_name">Android Order Tracking Screen UI Design</string>
    <string name="track_order">Track Order</string>
    <string name="estimated_time">Estimated Time</string>
    <string name="cancel">cancel</string>
    <string name="order_number">Order Number</string>
    <string name="_30_minutes">30 Minutes</string>
    <string name="order_number_value">#C862966</string>
    <string name="order_placed">Order Placed</string>
    <string name="we_have_received_your_order">We have received your order</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="your_order_has_been_confirmed">Your order has been confirmed</string>
    <string name="order_processed">Order Processed</string>
    <string name="your_order_ready_to_pickup">Your Order Ready To Pickup!</string>
    <string name="ready_to_pickup">Ready To Pickup</string>
    <string name="your_order_has_been_processed">Your Order has been Processed</string>
</resources>
