<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/arrow_back"
            android:tint="@color/colorWhite" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/track_order"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/drop_shadow"
        app:layout_constraintTop_toBottomOf="@id/layout_toolbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorLabelBackground"
        app:layout_constraintBottom_toTopOf="@id/view_divider"
        app:layout_constraintTop_toBottomOf="@id/layout_toolbar" />

    <TextView
        android:id="@+id/tv_estimated_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="@string/estimated_time"
        android:textAllCaps="true"
        android:textColor="@color/colorTextSecondary"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@id/tv_order_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_toolbar" />

    <TextView
        android:id="@+id/tv_order_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="@string/order_number"
        android:textAllCaps="true"
        android:textColor="@color/colorTextSecondary"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_estimated_time"
        app:layout_constraintTop_toBottomOf="@id/layout_toolbar" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:text="@string/_30_minutes"
        android:textColor="@color/colorTextPrimary"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tv_estimated_time"
        app:layout_constraintStart_toStartOf="@id/tv_estimated_time"
        app:layout_constraintTop_toBottomOf="@id/tv_estimated_time" />

    <TextView
        android:id="@+id/tv_order"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:text="@string/order_number_value"
        android:textColor="@color/colorTextPrimary"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tv_order_number"
        app:layout_constraintStart_toStartOf="@id/tv_order_number"
        app:layout_constraintTop_toBottomOf="@id/tv_order_number" />

    <View
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorDivider"
        app:layout_constraintTop_toBottomOf="@id/tv_time" />

    <View
        android:id="@+id/view_order_placed"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/shape_status_completed"
        app:layout_constraintBottom_toBottomOf="@id/image_order_placed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_order_placed" />


    <ImageView
        android:id="@+id/image_order_placed"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_placed"
        app:layout_constraintStart_toEndOf="@id/view_order_placed"
        app:layout_constraintTop_toBottomOf="@id/view_divider" />

    <View
        android:id="@+id/view_order_placed_supporter"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="@id/image_order_placed"
        app:layout_constraintEnd_toEndOf="@id/image_order_placed"
        app:layout_constraintStart_toStartOf="@id/image_order_placed"
        app:layout_constraintTop_toTopOf="@id/image_order_placed" />

    <TextView
        android:id="@+id/tv_order_placed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/order_placed"
        android:textColor="@color/colorTextPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/view_order_placed_supporter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_order_placed" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/we_have_received_your_order"
        android:textColor="@color/colorTextSecondary"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/tv_order_placed"
        app:layout_constraintStart_toStartOf="@id/tv_order_placed"
        app:layout_constraintTop_toBottomOf="@id/tv_order_placed" />

    <View
        android:id="@+id/view_order_confirmed"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/shape_status_completed"
        app:layout_constraintBottom_toBottomOf="@id/image_order_confirmed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_order_confirmed" />

    <ImageView
        android:id="@+id/image_order_confirmed"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_confirmed"
        app:layout_constraintStart_toEndOf="@id/view_order_confirmed"
        app:layout_constraintTop_toBottomOf="@id/image_order_placed" />

    <View
        android:id="@+id/view_order_confirmed_supporter"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="@id/image_order_confirmed"
        app:layout_constraintEnd_toEndOf="@id/image_order_confirmed"
        app:layout_constraintStart_toStartOf="@id/image_order_confirmed"
        app:layout_constraintTop_toTopOf="@id/image_order_confirmed" />

    <TextView
        android:id="@+id/tv_order_confirmed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/order_confirmed"
        android:textColor="@color/colorTextPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/view_order_confirmed_supporter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_order_confirmed" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/your_order_has_been_confirmed"
        android:textColor="@color/colorTextSecondary"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/tv_order_confirmed"
        app:layout_constraintStart_toStartOf="@id/tv_order_confirmed"
        app:layout_constraintTop_toBottomOf="@id/tv_order_confirmed" />

    <View
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/view_order_confirmed"
        app:layout_constraintEnd_toEndOf="@id/view_order_placed"
        app:layout_constraintStart_toStartOf="@+id/view_order_placed"
        app:layout_constraintTop_toBottomOf="@id/view_order_placed" />

    <View
        android:id="@+id/view_order_processed"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/shape_status_completed"
        app:layout_constraintBottom_toBottomOf="@id/image_order_processed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_order_processed" />

    <ImageView
        android:id="@+id/image_order_processed"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_process"
        app:layout_constraintStart_toEndOf="@id/view_order_processed"
        app:layout_constraintTop_toBottomOf="@id/image_order_confirmed" />

    <View
        android:id="@+id/view_order_processed_supporter"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="@id/image_order_processed"
        app:layout_constraintEnd_toEndOf="@id/image_order_processed"
        app:layout_constraintStart_toStartOf="@id/image_order_processed"
        app:layout_constraintTop_toTopOf="@id/image_order_processed" />

    <TextView
        android:id="@+id/tv_order_processed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/order_processed"
        android:textColor="@color/colorTextPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/view_order_processed_supporter"
        app:layout_constraintEnd_toEndOf="@id/tv_order_confirmed"
        app:layout_constraintStart_toStartOf="@id/tv_order_confirmed" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/your_order_has_been_processed"
        android:textColor="@color/colorTextSecondary"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/tv_order_processed"
        app:layout_constraintStart_toStartOf="@id/tv_order_processed"
        app:layout_constraintTop_toBottomOf="@id/tv_order_processed" />

    <View
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/view_order_processed"
        app:layout_constraintEnd_toEndOf="@id/view_order_processed"
        app:layout_constraintStart_toStartOf="@id/view_order_processed"
        app:layout_constraintTop_toBottomOf="@id/view_order_confirmed" />

    <View
        android:id="@+id/view_order_ready"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="30dp"
        android:alpha="0.5"
        android:background="@drawable/shape_status_remaining"
        app:layout_constraintBottom_toBottomOf="@id/image_order_ready"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_order_ready" />

    <ImageView
        android:id="@+id/image_order_ready"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:alpha="0.5"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_ready"
        app:layout_constraintStart_toEndOf="@id/view_order_ready"
        app:layout_constraintTop_toBottomOf="@id/image_order_processed" />

    <View
        android:id="@+id/view_order_ready_supporter"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="@id/image_order_ready"
        app:layout_constraintEnd_toEndOf="@id/image_order_ready"
        app:layout_constraintStart_toStartOf="@id/image_order_ready"
        app:layout_constraintTop_toTopOf="@id/image_order_ready" />

    <TextView
        android:id="@+id/tv_order_ready"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ready_to_pickup"
        android:textColor="@color/colorTextPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        android:alpha="0.5"
        app:layout_constraintBottom_toTopOf="@+id/view_order_ready_supporter"
        app:layout_constraintEnd_toEndOf="@id/tv_order_processed"
        app:layout_constraintStart_toStartOf="@id/tv_order_processed" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/your_order_ready_to_pickup"
        android:textColor="@color/colorTextSecondary"
        android:textSize="15sp"
        android:alpha="0.5"
        app:layout_constraintEnd_toEndOf="@id/tv_order_ready"
        app:layout_constraintStart_toStartOf="@id/tv_order_ready"
        app:layout_constraintTop_toBottomOf="@id/tv_order_ready" />

    <View
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:alpha="0.5"
        android:background="@drawable/shape_status_remaining"
        app:layout_constraintBottom_toTopOf="@id/view_order_ready"
        app:layout_constraintEnd_toEndOf="@id/view_order_ready"
        app:layout_constraintStart_toStartOf="@id/view_order_ready"
        app:layout_constraintTop_toBottomOf="@id/view_order_processed" />


</androidx.constraintlayout.widget.ConstraintLayout>
